add login endpoint for users and admins
